[workspace]
resolver = "2"
members = [
    "core",
    "native",
]

# The wasm32 Worker is its own build (compiled via `worker-build`, see
# worker/wrangler.toml). Excluding it keeps the native `cargo build` and the Fly
# Docker image free of the wasm-only dependency tree. The worker still shares
# logic through a path dependency on `core`.
exclude = [
    "worker",
]
