[package]
name = "tolerance-api"
authors = [ "Sam Sporidis <samsporidissoftware@protonmail.com>" ]
version = "0.1.34"
edition = "2024"

[lib]
name = "tolerance_api"
path = "src/lib.rs"
# cdylib: the wasm Worker artifact. rlib: so the native `ingest` bin can link the lib.
crate-type = ["cdylib", "rlib"]

# Offline ingest tool (native target). Builds the KV bulk-put payloads.
[[bin]]
name = "ingest"
path = "src/bin/ingest.rs"

[dependencies]
# Portable (compile on both native and wasm32):
axum = { version = "0.7", default-features = false, features = ["query", "json", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tower-service = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
utoipa = { version = "5", features = ["axum_extras"] }
# default features pull in a CLI/TUI stack (arboard, ratatui, crossterm) that
# does not target wasm; we only need the library encoder.
toon-format = { version = "0.4.3", default-features = false }

# Worker runtime only (wasm32). Kept out of the native `ingest` build so the
# wasm-only `worker` crate never compiles for the host target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.8", features = ["http"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Size optimizations for the wasm artifact (Workers bundle-size limits).
[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
