[package]
name = "tolerance-api"
authors = [ "Sam Sporidis <samsporidissoftware@protonmail.com>" ]
version = "0.1.40"
edition = "2024"

[[bin]]
name = "tolerance-api"
path = "src/main.rs"

[lib]
name = "tolerance_api"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
utoipa = { version = "5", features = ["axum_extras"] }
toon-format = "0.4.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
