[package]
name = "tolerance-api-core"
version = "0.1.34"
edition = "2024"

[lib]
name = "tolerance_api_core"
path = "src/lib.rs"

# Framework-agnostic CMMC/NIST logic shared by the native axum service
# (`../native`) and the wasm32 Cloudflare Worker (`../worker`).
#
# Keep this crate free of axum / tokio / sqlx / any std::net or std::fs so it
# compiles cleanly to wasm32-unknown-unknown. Data loading (disk vs R2) lives in
# the consuming crates; this crate only operates on already-resolved documents.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# OpenAPI schema/param derives. The `utoipa` runtime crate (without axum extras)
# compiles to wasm32, so both consumers can share the annotated types.
utoipa = { version = "5" }
# TOON content-negotiation output (Accept: text/toon). `default-features = false`
# drops the `cli` feature (clap/crossterm/ratatui/...), which is both unnecessary
# and not wasm-compatible.
toon-format = { version = "0.4.3", default-features = false }
