[package]
name = "tolerance-api-worker"
version = "0.1.34"
edition = "2024"

[lib]
crate-type = ["cdylib"]

# Cloudflare Worker edge for the CMMC API. Reuses the framework-agnostic logic in
# `../core` verbatim; the only Worker-specific concerns here are routing, lazy R2
# loading + per-isolate caching, and response encoding. SP 800-53 is intentionally
# not served (the native Fly service keeps it).
[dependencies]
tolerance-api-core = { path = "../core" }
worker = "0.8"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
